objects/APTS_ConfigIT_Integration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting holds all ConfigIT static strings etc..</description>
    <fields>
        <fullName>APTS_Action_Response__c</fullName>
        <label>Action Response</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Dev_Name__c</fullName>
        <label>Dev Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hook_URL__c</fullName>
        <label>Hook URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Path_URL__c</fullName>
        <label>Path URL</label>
        <type>TextArea</type>
    </fields>
    <label>ConfigIT Integration</label>
</CustomObject>